[tool.poetry]
name = "db_backup"
version = "0.1.0"
description = "Back your shit up"
authors = ["bigdroox"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
redis = "^4.3.1"
APScheduler = "^3.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
